added section on library vs framework

--- a/notes.html
+++ b/notes.html
@@ -26,7 +26,9 @@
       h2 {
         display: flex;
         justify-content: center;
-        font-size: 45px;
+        font-size: 55px;
+        margin-top: 100px;
+        font-weight: bold;
       }
       ul {
         margin-top: 40px;
@@ -54,7 +56,7 @@
         React is a popular front-end framework / library that's developed and
         sponsored by Facebook
       </p>
-      <p class="display-4">The main point of React is to:</p>
+      <p class="display-4 mb-4">The main point of React is to:</p>
       <table id="t1" class="table d-flex display-5 justify-content-center">
         <thead></thead>
         <tbody>
@@ -91,8 +93,65 @@
       <p>
         They are often 'opinionated' meaning you have to follow the rules of the
         framework, which can often be restricting depending on what your goals
-        are
+        are. This is often referred to as 'inversion of control', with a
+        library, you're in control of the structure, with a framework, the
+        framework has control
       </p>
+      <p>
+        Frameworks often provide code for reuse inside the framework, as well 
+        as providing templating of HTML
+      </p>
+      <p>
+        The main frameworks are:
+        <ul>
+            <li>
+                Angular
+            </li>
+            <li>
+                Vue
+            </li>
+            <li>
+                Ember
+            </li>
+            <li>
+                React??
+            </li>
+        </ul>
+      </p>
+      <p>
+        There are dozens of frameworks out there, those 4 are 
+        the most popular
+      </p>
+      <p>
+        React does less 'out of the box' than a tradtional framework, but 
+        when most developers utilize React, they're also using React 
+        specific tools alongside
+      </p>
+      <p>
+        Things like: React Router, Redux, Remix, there's a lot 
+        of of React tools available for use, and there's almost a 
+        'standardized stack' for developing React
+      </p>
+    </div>
+    <div class="container">
+          <h2 class="justify-content-center">
+            Library or Framework?
+          </h2>
+          <p>
+           So at face value React IS a library, on it's own.
+          </p>
+          <p>
+            However, few people use React just by itself, it's almost 
+            always combined with things like React Router, Webpack etc..
+          </p>
+          <p>
+            So when React is used in conjunction with tools like React Router,
+            Redux, Webpack, React becomes an 'Ecosystem Framework'
+          </p>
+          <p>
+            But there's also Next.js which is an actual framework built around 
+            React
+          </p>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
