added more to intro

--- a/notes.html
+++ b/notes.html
@@ -138,7 +138,7 @@
             Library or Framework?
           </h2>
           <p>
-           So at face value React IS a library, on it's own.
+           So at face value React is a library, on it's own.
           </p>
           <p>
             However, few people use React just by itself, it's almost 
@@ -152,6 +152,24 @@
             But there's also Next.js which is an actual framework built around 
             React
           </p>
+    </div>
+    <div class="container mt-4">
+        <h2>
+            Components
+        </h2>
+        <p>
+            Let's talk about components, components are the main building 
+            block of React, React is about creating these components and 
+            structuring how these components communicate with each other, 
+            pass data bewteen one another
+        </p>
+        <p>
+            Components let you split the User Interface into independent, 
+            reuasble peices, and think about each peice in isolation
+        </p>
+        Components usually combine peices of UI and JavaScript logic, for 
+        example the first component we'll look at is the rating component, 
+        where you can click a number of stars out of four or five and 
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
