added first component demo

--- a/notes.html
+++ b/notes.html
@@ -16,9 +16,10 @@
     <style>
       body {
         background-color: lightcyan;
+        font-size: 100%;
       }
       p {
-        font-size: 30px;
+        font-size: 2rem;
         display: flex;
         justify-content: center;
         margin-top: 40px;
@@ -26,8 +27,15 @@
       h2 {
         display: flex;
         justify-content: center;
-        font-size: 55px;
-        margin-top: 100px;
+        font-size: 5rem;
+        margin-top: 60px;
+        font-weight: bold;
+      }
+      h3{
+        display: flex;
+        justify-content: center;
+        font-size: 4rem;
+        margin-top: 50px;
         font-weight: bold;
       }
       ul {
@@ -185,7 +193,7 @@
       <p>
         If we're working on a large project, our file structure will have many 
         different JavaScript files, 10-30 or however many, but each of our components 
-        is localized inside it's own unique file, so our SRC folder will have 
+        is localized inside it's own unique JavaScript file, so our SRC folder will have 
         a LOT of files inside
       </p>
       <p>
@@ -202,6 +210,26 @@
         uncustomized, then take that navbar component and use it in 3 or however many unique 
         locations, changing how the navbar looks and functions each time
       </p>
+    </div>
+    <div class="container">
+      <h2>Setting up our server</h2>
+      <p>
+        Normally we'd use a command in the terminal 'create-react-app' which 
+        takes care of a lot of details for us, but it's useful to know how to 
+        set things up the 'old-fashioned' way
+      </p>
+      <p>
+        We'll add a single HTML file, we'll add in a script manually,
+        but the caveat is that we NEED a server, and what we'll use in this 
+        course is the liveServer extension in VSCODE</p>
+    </div>
+    <div class="container">
+      <h2>
+        Components
+      </h2>
+      <h3>
+        Writing our first component
+      </h3>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
