added intro to jsx

--- a/notes.html
+++ b/notes.html
@@ -433,6 +433,53 @@ crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js">
         With the introduction of Hooks, we can write full-featured 
         function components, which will dive into later!
       </p>
+      <p>
+        For now though, we'll focus on the traditional class
+        based components, that way we can only worry about 
+        one kind of syntax for now, and of course, we'll deep 
+        dive into Hooks later in the course!
+      </p>
+      <p>
+        In summary we can render things to our page with both class, and 
+        function components, but function components are usually utilized 
+        for simpler tasks
+      </p>
+    </div>
+    <div class="container">
+      <h2>
+        Introducing: JSX
+      </h2>
+      <p>
+        This section we'll learn about JSX which stands for JavaScript
+        Syntax Xtension, or JavaScript + XML
+      </p>
+      <p>
+        JSX is the tool that allows us to write HTML looking code 
+        inside of a JavaScript file, there's a lot going on 
+        behind the scenes with BABEL turning the HTML characters 
+        in JSX to valid JS code
+      </p>
+      <p>
+        It's possible to create React applications without 
+        JSX but it's more time-consuming and results in more code 
+        needing to be written
+      </p>
+    </div>
+    <div class="container">
+      <h2>
+        JSX is NOT legal JavaScript
+        </h2>
+        <p>it has to be transpiled to 
+        valid JavaScript using Babel
+      </p>
+      <h2>
+        JSX Rules
+      </h2>
+      <p>
+        JSX is more strict than HTML -- elements must either 
+        have an explicit closing tag, or be self-closed, the '/'
+        is critical, otherwise we'll always get a syntax error
+      </p>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
