added section on properties

--- a/notes.html
+++ b/notes.html
@@ -582,8 +582,17 @@ crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js">
     </div>
     <div class="container">
       <h2>
-        Intro to REACT PROPS
+        Intro to REACT PROPS AKA PROPERTIES
       </h2>
+      <p>
+        Props or properties allow us to make components more 
+        customizable, configurable AND resuable!
+      </p>
+      <p>
+        For example, with our last Greet component, we can add props 
+        that will be given for 'to': or who we are greeting, and 
+        'from': who is greeting us. Hello Luke, From Rene
+      </p>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
