--- a/notes.html
+++ b/notes.html
@@ -593,6 +593,55 @@ crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js">
         that will be given for 'to': or who we are greeting, and 
         'from': who is greeting us. Hello Luke, From Rene
       </p>
+      <p>
+        Just finished the exercise, we can use '{this.prop.key}' 
+        to like in JS template literals, pass in values, we 
+        can also to shorten it do:
+      </p>
+      <p>
+        const prop = this.props, then '{this.prop.key}' becomes:
+      </p>
+      <p>
+        {props.key}
+      </p>
+      <p>
+        And the '.key' being what we defined inside the main index.js, 
+        render function as key value pairs, like inside of an object
+      </p>
+      <p>
+        < Hello to:"Luke" from:"Rene", so like an object, 
+        'to' is the key, and "Luke" is the value
+      </p>
+    </div>
+    <div class="container">
+      <h2>Props are immutable?</h2>
+      <p>
+        This is crucial! Properties are for configuring 
+        your component, but these properties are immutable, they 
+        cannot change
+      </p>
+      <p>
+        That doesn't mean components can't be altered, we just can't do it 
+        through props
+      </p>
+      <p>
+        This will be more obvious when we get into things like 'state', 
+        rendering and re-rendering
+      </p>
+    </div>
+    <div class="container">
+      <h2>
+        Other types of Props
+      </h2>
+      <p>
+        So far all our properties have been strings, but we pass 
+        in other data-types as well, numbers, booleans, arrays using, 
+        curly braces to embed them 
+      </p>
+      <p>
+        We can also pass in images, using an img tag as a prop, then 
+        in the component file we do : < img src={this.props.img} / >
+      </p>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
