--- a/notes.html
+++ b/notes.html
@@ -87,14 +87,14 @@
     </div>
     <div class="container mt-6">
       <p>
-        React apps are made up of smaller components and built up until we ahve
+        React apps are made up of smaller components and built up until we have
         a full size application, we use the tools React provides to build these
         components
       </p>
       <h2>Front end frameworks:</h2>
       <p>
         Front end frameworks are larger than a library, for example we can have
-        a libraary for setting date and time, and we plug that library into the
+        a library for setting date and time, and we plug that library into the
         framework, the framework provides the structure / blueprint, and you add
         the rest
       </p>
