added more to slot-machine exercise + intro to JSX looping with .map()

--- a/notes.html
+++ b/notes.html
@@ -643,6 +643,22 @@ crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js">
         in the component file we do : < img src={this.props.img} / >
       </p>
     </div>
+    <div class="container">
+      <h2>
+        Looping in JSX
+      </h2>
+      <p>
+        We've seen how to embed variables, and add conditional 
+        logic in JSX so far, but now we need to learn how 
+        to loop in JSX
+      </p>
+      <p>
+        The most common way is to use the .map() to output loops in JSX
+      </p>
+      <p>
+        
+      </p>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
       integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
